Added the possibility for the WSC to configure maxReceivedMessageSize on the Liberty basic binding.

--- a/Tests/Digst.OioIdws.LibBas.Test/App.config
+++ b/Tests/Digst.OioIdws.LibBas.Test/App.config
@@ -29,14 +29,15 @@
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
-          <!--Endpoints can only point to a single behaviour configuration. Hence, we need to include the LibBasBehavior in a existing behavior-->
+          <!-- Endpoints can only point to a single behaviour configuration. Hence, we need to include the LibBasBehavior in a existing behavior -->
           <LibBasBehavior/>
         </behavior>
       </endpointBehaviors>
     </behaviors>
     <bindings>
       <LibBasBinding>
-        <binding name="LibBasBindingConfiguration" useHttps="false" sendTimeout="00:15:00"/>
+        <!-- Setting the default value 65536 bytes on maxReceivedMessageSize is only done to test that the configuration works. -->
+        <binding name="LibBasBindingConfiguration" useHttps="false" sendTimeout="00:15:00" maxReceivedMessageSize="65536"/>
       </LibBasBinding>
     </bindings>
     <client>
