--- a/Source/Digst.OioIdws.Wsp/Digst.OioIdws.Wsp.nuspec
+++ b/Source/Digst.OioIdws.Wsp/Digst.OioIdws.Wsp.nuspec
@@ -12,14 +12,14 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>Initial version of Digst.OioIdws.Wsp. This version only supports signature case.</releaseNotes>
-    <copyright>Copyright 2015</copyright>
+    <copyright>Copyright 2017</copyright>
     <tags>OIOIDWS WSP NEMLOGIN NEMLOG-IN</tags>
+    <frameworkAssemblies>
+      <frameworkAssembly assemblyName="System.IdentityModel" targetFramework="net45" />
+      <frameworkAssembly assemblyName="System.ServiceModel" targetFramework="net45" />
+    </frameworkAssemblies>
   </metadata>
   <files>
-    <file src="bin\Release\Digst.OioIdws.Common.dll" target="lib\net45" />
-    <file src="bin\Release\Digst.OioIdws.Common.pdb" target="lib\net45" />
-    <file src="bin\Release\Digst.OioIdws.LibBas.dll" target="lib\net45" />
-    <file src="bin\Release\Digst.OioIdws.LibBas.pdb" target="lib\net45" />
     <file src="App.config.install.xdt" target="content"/>
     <file src="App.config.uninstall.xdt" target="content"/>
     <file src="readme.txt" target=""/>
