--- a/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
@@ -9,8 +9,24 @@
     <!-- section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/-->
     <!-- OIOIDWS section stop -->
   </configSections>
-  
-  <!-- OIOIDWS section start -->
+
+  <!-- OIOIDWS REST section start -->
+  <appSettings>
+    <!--Use this setting to target the seperate server example -->
+    <!--<add key="AsEndpoint" value="https://digst.oioidws.rest.as:10001/accesstoken/issue"/>-->
+    <!--Use this setting to target the combined server example-->
+    <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>
+    <add key="AudienceUri" value="https://wsp.oioidws-net.dk"/>
+    <add key="ClientCertificate" value="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5"/>
+    <add key="StsCertificate" value="d9f10c97aa647727adb64a349bb037c5c23c9a7a"/>
+    <add key="StsEndpointAddress" value="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"/>
+    <add key="TokenLifeTimeInSeconds" value="30000"/>
+    <add key="WspTestEndpointAddress" value="https://digst.oioidws.rest.wsp:10002/hello"/>
+    <add key="WspTestEndpointAddress2" value="https://digst.oioidws.rest.wsp:10002/hello2"/>
+  </appSettings>
+  <!-- OIOIDWS REST section end -->
+
+  <!-- OIOIDWS SOAP section start -->
   <system.serviceModel>
     <extensions>
       <bindingExtensions>
