--- a/Examples/Digst.OioIdws.WscExampleNuGet/Digst.OioIdws.WscExampleNuGet.csproj
+++ b/Examples/Digst.OioIdws.WscExampleNuGet/Digst.OioIdws.WscExampleNuGet.csproj
@@ -75,7 +75,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Service References\HelloWorldProxy\HelloWorld.wsdl" />
     <None Include="Service References\HelloWorldProxy\HelloWorld.xsd">
