--- a/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.csproj
+++ b/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Digst.OioIdws.Wsc.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,6 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Digst.OioIdws.Wsc.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,15 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="OioWsTrust\CertificateUtil.cs" />
     <Compile Include="OioWsTrust\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OioWsTrust\TokenServiceConfigurationFactory.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config.install.xdt" />
-    <None Include="App.config.uninstall.xdt" />
-    <None Include="Digst.OioIdws.Wsc.nuspec" />
+    <None Include="App.config.install.xdt">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="App.config.uninstall.xdt">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Digst.OioIdws.Wsc.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Digst.OioIdws.Common\Digst.OioIdws.Common.csproj">
