Updated NuGet Examples after release of official pkgs to nuget.org

--- a/Examples/Digst.OioIdws.WscExampleNuGet/App.config
+++ b/Examples/Digst.OioIdws.WscExampleNuGet/App.config
@@ -26,7 +26,8 @@
             <serviceCertificate>
               <scopedCertificates>
                 <!-- Certificate of WSP. Used for checking signature on response. targetURI must match the endpoint address. -->
-                <add findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My" targetUri="http://127.0.0.1:9091/HelloWorld" x509FindType="FindByThumbprint"/>
+                <add findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My"
+                  targetUri="http://127.0.0.1:9091/HelloWorld" x509FindType="FindByThumbprint"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -50,7 +51,8 @@
       </endpoint>
     </client>
   </system.serviceModel>
-  <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
+  <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"
+  	tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
     <clientCertificate findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
     <stsCertificate findValue="d9f10c97aa647727adb64a349bb037c5c23c9a7a" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
