--- a/Examples/Digst.OioIdws.WspExampleNuGet/App.config
+++ b/Examples/Digst.OioIdws.WspExampleNuGet/App.config
@@ -46,6 +46,12 @@
         <endpoint address="http://127.0.0.1:9091/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding"
           bindingConfiguration="SoapBindingConfiguration" contract="Digst.OioIdws.WspExampleNuGet.IHelloWorld"/>
       </service>
+      <service name="{REQUIRED}" behaviorConfiguration="SoapServiceBehaviourConfiguration">
+        <!-- address is the endpint at which the service listens to incoming requests, contract is the full name of the interface which the service must implement. -->
+        <endpoint address="{REQUIRED}" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="{REQUIRED}"
+          behaviorConfiguration="SoapBehaviourConfiguration">
+        </endpoint>
+      </service>
     </services>
     <extensions>
       <bindingExtensions>
@@ -70,7 +76,8 @@
           <!--Setting useIdentityConfiguration to true in a service behavior did not work because it happens too late in the pipe line and the service certificate would not be set to be the decrypting key-->
           <!--WIF is also needed in order to support STR transformations when signing and validating signatures. -->
           <serviceCredentials useIdentityConfiguration="true">
-            <serviceCertificate findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+            <serviceCertificate findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My"
+              x509FindType="FindByThumbprint"/>
           </serviceCredentials>
         </behavior>
       </serviceBehaviors>
@@ -82,12 +89,14 @@
       <!--audienceUris specifies this service and is used to check that the SAML token from NemLog-in STS is indeed issued to this service.-->
       <audienceUris>
         <add value="https://wsp.oioidws-net.dk"/>
+        <add value="{REQUIRED}"/>
       </audienceUris>
       <!--issuerNameRegistry specifies the certificate of the Nemlog-In STS. Both thumbprint and Common Name must be specified.-->
       <!--Issuer certificate is embedded in the encrypted SAML assertion. Hence, it it does not need to be recieved out-of-band and placed in the certificate store-->
       <issuerNameRegistry>
         <trustedIssuers>
           <add name="Digitaliseringsstyrelsen - NemLog-in Test" thumbprint="d9f10c97aa647727adb64a349bb037c5c23c9a7a"/>
+          <add thumbprint="{REQUIRED}" name="{REQUIRED}"/>
         </trustedIssuers>
       </issuerNameRegistry>
       <!--The Saml2SecurityTokenHandler security token handler must be replacded by a custom that handles that the signing certificate reference is the id of the encrypted assertion-->
@@ -98,4 +107,12 @@
       </securityTokenHandlers>
     </identityConfiguration>
   </system.identityModel>
+  <system.web>
+    <webServices>
+      <serviceDescriptionFormatExtensionTypes>
+        <add type="Digst.OioIdws.Wsp.Wsdl.Bindings.Policy, Digst.OioIdws.Wsp.Wsdl"/>
+        <add type="Digst.OioIdws.Wsp.Wsdl.Bindings.PolicyReference, Digst.OioIdws.Wsp.Wsdl"/>
+      </serviceDescriptionFormatExtensionTypes>
+    </webServices>
+  </system.web>
 </configuration>
