--- a/Examples/Digst.OioIdws.WspExampleNuGet/Digst.OioIdws.WspExampleNuGet.csproj
+++ b/Examples/Digst.OioIdws.WspExampleNuGet/Digst.OioIdws.WspExampleNuGet.csproj
@@ -32,14 +32,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Digst.OioIdws.Common, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Digst.OioIdws.Wsp.2.0.0\lib\net45\Digst.OioIdws.Common.dll</HintPath>
+    <Reference Include="Digst.OioIdws.Common, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Digst.OioIdws.Wsp.3.0.0\lib\net45\Digst.OioIdws.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Digst.OioIdws.Soap, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Digst.OioIdws.Wsp.2.0.0\lib\net45\Digst.OioIdws.Soap.dll</HintPath>
+    <Reference Include="Digst.OioIdws.Soap, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Digst.OioIdws.Wsp.3.0.0\lib\net45\Digst.OioIdws.Soap.dll</HintPath>
     </Reference>
-    <Reference Include="Digst.OioIdws.Wsp, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Digst.OioIdws.Wsp.2.0.0\lib\net45\Digst.OioIdws.Wsp.dll</HintPath>
+    <Reference Include="Digst.OioIdws.Wsp, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Digst.OioIdws.Wsp.3.0.0\lib\net45\Digst.OioIdws.Wsp.dll</HintPath>
+    </Reference>
+    <Reference Include="Digst.OioIdws.Wsp.Wsdl, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Digst.OioIdws.Wsp.3.0.0\lib\net45\Digst.OioIdws.Wsp.Wsdl.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
