Added logo png  to projects

--- a/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.csproj
+++ b/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.csproj
@@ -112,6 +112,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="oiosaml_logo.png" />
     <Content Include="readme.txt" />
     <None Include="Release instructions.txt" />
   </ItemGroup>
