--- a/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.csproj
+++ b/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.csproj
@@ -83,6 +83,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="oiosaml_logo.png" />
     <Content Include="readme.txt" />
     <None Include="NuGetBuildPackPublish.cmd" />
   </ItemGroup>
