--- a/Source/Digst.OioIdws.Wsp/Digst.OioIdws.Wsp.csproj
+++ b/Source/Digst.OioIdws.Wsp/Digst.OioIdws.Wsp.csproj
@@ -72,6 +72,7 @@
     <None Include="NuGetBuildPackPublish.cmd" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="oiosaml_logo.png" />
     <Content Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
