--- a/Examples/Digst.OioIdws.WscExampleConfByCode/Digst.OioIdws.WscExampleConfByCode.csproj
+++ b/Examples/Digst.OioIdws.WscExampleConfByCode/Digst.OioIdws.WscExampleConfByCode.csproj
@@ -8,8 +8,9 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Digst.OioIdws.WscExampleConfByCode</RootNamespace>
     <AssemblyName>Digst.OioIdws.WscExampleConfByCode</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
