Code comments, code cleanup, configuration settings

--- a/Examples/Digst.OioIdws.WscLocalTokenExample/App.config
+++ b/Examples/Digst.OioIdws.WscLocalTokenExample/App.config
@@ -8,8 +8,9 @@
 	</configSections>
 
 	<appSettings>
-		<add key="LocalTokenCertificateThumbprint" value="8081B09446A396BA0FF9B7159D07D8C90F7DB9AE" />
+		<add key="LocalTokenServiceSigningCertificateThumbprint" value="8081B09446A396BA0FF9B7159D07D8C90F7DB9AE" />
 		<add key="LocalTokenServiceEntityId" value="https://sts.oioidws-net.dk" />
+		<add key="NemLoginLocalTokenStsEntityId" value="https://local.sts.nemlog-in.dk/" />
 	</appSettings>
 
 
