--- a/Examples/Digst.Oioidws.WscBootstrapExample/Digst.Oioidws.WscBootstrapExample.csproj
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Digst.Oioidws.WscBootstrapExample.csproj
@@ -282,9 +282,9 @@
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <PropertyGroup>
-    <PreBuildEvent>::Add https binding to *, allowing access on custom domain name
+    <!--<PreBuildEvent>::Add https binding to *, allowing access on custom domain name
 "%25programfiles%25\IIS Express\appcmd.exe" set site "Digst.Oioidws.WscBootstrapExample" /-bindings.[protocol='https',bindingInformation='*:20002:'] /apphostconfig:"$(SolutionDir).vs\config\applicationhost.config"
-"%25programfiles%25\IIS Express\appcmd.exe" set site "Digst.Oioidws.WscBootstrapExample" /+bindings.[protocol='https',bindingInformation='*:20002:'] /apphostconfig:"$(SolutionDir).vs\config\applicationhost.config"</PreBuildEvent>
+"%25programfiles%25\IIS Express\appcmd.exe" set site "Digst.Oioidws.WscBootstrapExample" /+bindings.[protocol='https',bindingInformation='*:20002:'] /apphostconfig:"$(SolutionDir).vs\config\applicationhost.config"</PreBuildEvent>-->
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>
