NLRFIM-25 Updating thumbprints used.

--- a/Examples/Digst.OioIdws.Java/Digst.OioIdws.DotnetWscJavaWspExample/App.config
+++ b/Examples/Digst.OioIdws.Java/Digst.OioIdws.DotnetWscJavaWspExample/App.config
@@ -61,12 +61,11 @@
                            stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"
                            tokenLifeTimeInMinutes="5"
                            wspEndpointID="https://wsp.itcrew.dk">
-    <!--<clientCertificate findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>-->
     <clientCertificate findValue="96A26BF6E07DE6DB74E356472CCA4776FEC9B0DA"
                        storeLocation="LocalMachine"
                        storeName="My"
                        x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="D9F10C97AA647727ADB64A349BB037C5C23C9A7A"
+    <stsCertificate findValue="FCB5EDC9FB09CF39716C09C35FDC883BD48ADD8D"
                     storeLocation="LocalMachine"
                     storeName="My"
                     x509FindType="FindByThumbprint"/>
@@ -109,7 +108,6 @@
           <clientCredentials>
             <serviceCertificate>
               <scopedCertificates>
-                <!--<add findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My" targetUri="https://localhost:8443/HelloWorld/services/helloworld" x509FindType="FindByThumbprint"/>-->
                 <add findValue="85398FCF737FB76F554C6F2422CC39D3A35EC26F" 
                      storeLocation="LocalMachine" 
                      storeName="My" 
@@ -135,7 +133,7 @@
                 bindingConfiguration="SoapBindingConfiguration" 
                 contract="HelloWorldProxy.HelloWorldPortType">
         <identity>
-          <!--<dns value="wsp.oioidws-net.dk TEST (funktionscertifikat)"/>-->
+          <!--<dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>-->
           <dns value="eID JAVA test (funktionscertifikat)"/>
         </identity>
       </endpoint>
