--- a/Examples/Digst.OioIdws.WscExampleNuGet/App.config
+++ b/Examples/Digst.OioIdws.WscExampleNuGet/App.config
@@ -26,7 +26,7 @@
             <serviceCertificate>
               <scopedCertificates>
                 <!-- Certificate of WSP. Used for checking signature on response. targetURI must match the endpoint address. -->
-                <add findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My"
+                <add findValue="CA30025A4981147505B8D7A59052AC40C7033688" storeLocation="LocalMachine" storeName="My"
                   targetUri="http://127.0.0.1:9091/HelloWorld" x509FindType="FindByThumbprint"/>
               </scopedCertificates>
             </serviceCertificate>
@@ -38,7 +38,7 @@
     </behaviors>
     <bindings>
       <SoapBinding>
-        <binding name="SoapBindingConfiguration" useHttps="false"/>
+        <binding name="SoapBindingConfiguration" useHttps="true"/>
       </SoapBinding>
     </bindings>
     <client>
@@ -46,15 +46,15 @@
         behaviorConfiguration="SoapBehaviourConfiguration" bindingConfiguration="SoapBindingConfiguration">
         <identity>
           <!--Common name specified in certificate that identifies the WSP-->
-          <dns value="wsp.oioidws-net.dk TEST (funktionscertifikat)"/>
+          <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
         </identity>
       </endpoint>
     </client>
   </system.serviceModel>
   <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"
   	tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
-    <clientCertificate findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="d9f10c97aa647727adb64a349bb037c5c23c9a7a" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <clientCertificate findValue="A402BB172929AE0D0ADA62F6864329C35DC29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="FCB5EDC9FB09CF39716C09C35FDC883BD48ADD8D" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
   <oioIdwsLoggingConfiguration logger="Digst.OioIdws.WscExampleNuGet.Log4NetLogger, Digst.OioIdws.WscExampleNuGet"/>
   <log4net>
