--- a/Examples/Digst.OioIdws.WspExampleNuGet/App.config
+++ b/Examples/Digst.OioIdws.WspExampleNuGet/App.config
@@ -38,7 +38,7 @@
     </diagnostics>
     <bindings>
       <SoapBinding>
-        <binding name="SoapBindingConfiguration" useHttps="false"/>
+        <binding name="SoapBindingConfiguration" useHttps="true"/>
       </SoapBinding>
     </bindings>
     <services>
@@ -76,7 +76,7 @@
           <!--Setting useIdentityConfiguration to true in a service behavior did not work because it happens too late in the pipe line and the service certificate would not be set to be the decrypting key-->
           <!--WIF is also needed in order to support STR transformations when signing and validating signatures. -->
           <serviceCredentials useIdentityConfiguration="true">
-            <serviceCertificate findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My"
+            <serviceCertificate findValue="CA30025A4981147505B8D7A59052AC40C7033688" storeLocation="LocalMachine" storeName="My"
               x509FindType="FindByThumbprint"/>
           </serviceCredentials>
         </behavior>
@@ -95,7 +95,7 @@
       <!--Issuer certificate is embedded in the encrypted SAML assertion. Hence, it it does not need to be recieved out-of-band and placed in the certificate store-->
       <issuerNameRegistry>
         <trustedIssuers>
-          <add name="Digitaliseringsstyrelsen - NemLog-in Test" thumbprint="d9f10c97aa647727adb64a349bb037c5c23c9a7a"/>
+          <add name="Digitaliseringsstyrelsen - NemLog-in Test" thumbprint="FCB5EDC9FB09CF39716C09C35FDC883BD48ADD8D"/>
           <add thumbprint="{REQUIRED}" name="{REQUIRED}"/>
         </trustedIssuers>
       </issuerNameRegistry>
