--- a/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
@@ -16,8 +16,8 @@
     <!--Use this setting to target the combined server example-->
     <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>
     <add key="AudienceUri" value="https://wsp.oioidws-net.dk"/>
-    <add key="ClientCertificate" value="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5"/>
-    <add key="StsCertificate" value="d9f10c97aa647727adb64a349bb037c5c23c9a7a"/>
+    <add key="ClientCertificate" value="A402BB172929AE0D0ADA62F6864329C35DC29483"/>
+    <add key="StsCertificate" value="FCB5EDC9FB09CF39716C09C35FDC883BD48ADD8D"/>
     <add key="StsEndpointAddress" value="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"/>
     <add key="TokenLifeTimeInSeconds" value="60"/>
     <add key="WspTestEndpointAddress" value="https://digst.oioidws.rest.wsp:10002/hello"/>
@@ -41,7 +41,7 @@
             <serviceCertificate>
               <scopedCertificates>
                 <!-- Certificate of WSP. Used for checking signature on response. targetURI must match the endpoint address. -->
-                <add findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My" targetUri="http://127.0.0.1:9090/HelloWorld" x509FindType="FindByThumbprint"/>
+                <add findValue="CA30025A4981147505B8D7A59052AC40C7033688" storeLocation="LocalMachine" storeName="My" targetUri="http://127.0.0.1:9090/HelloWorld" x509FindType="FindByThumbprint"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -52,21 +52,21 @@
     </behaviors>
     <bindings>
       <SoapBinding>
-        <binding name="SoapBindingConfiguration" useHttps="false"/>
+        <binding name="SoapBindingConfiguration" useHttps="true"/>
       </SoapBinding>
     </bindings>
     <client>
       <endpoint address="http://127.0.0.1:9090/HelloWorld" binding="SoapBinding" contract="HelloWorldProxy.IHelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" bindingConfiguration="SoapBindingConfiguration">
         <identity>
           <!--Common name specified in certificate that identifies the WSP-->
-          <dns value="wsp.oioidws-net.dk TEST (funktionscertifikat)"/>
+          <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
         </identity>
       </endpoint>
     </client>
   </system.serviceModel>
   <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
-    <clientCertificate findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="d9 f1 0c 97 aa 64 77 27 ad b6 4a 34 9b b0 37 c5 c2 3c 9a 7a" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <clientCertificate findValue="A402BB172929AE0D0ADA62F6864329C35DC29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="FCB5EDC9FB09CF39716C09C35FDC883BD48ADD8D" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
   <oioIdwsLoggingConfiguration logger=""/>
   <!-- OIOIDWS section stop -->
@@ -80,7 +80,7 @@
   <Federation xmlns="urn:dk.nita.saml20.configuration">
     <SessionTimeout>30</SessionTimeout>
     <PreventOpenRedirectAttack>true</PreventOpenRedirectAttack>
-    <SigningCertificate findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <SigningCertificate findValue="A402BB172929AE0D0ADA62F6864329C35DC29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
     <AllowedAudienceUris>
       <Audience>https://saml.oiosaml-net.dk</Audience>
     </AllowedAudienceUris>
