--- a/Tests/Digst.OioIdws.Trust.Signature.Test/App.config
+++ b/Tests/Digst.OioIdws.Trust.Signature.Test/App.config
@@ -4,8 +4,8 @@
     <section name="oioIdwsWcfConfiguration" type="Digst.OioIdws.Wsc.OioWsTrust.Configuration, Digst.OioIdws.Wsc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
   </configSections>
   <oioIdwsWcfConfiguration stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" wspEndpointID="https://wsp.oioidws-net.dk" tokenLifeTimeInMinutes="5" debugMode="true">
-    <clientCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5"/>
-    <stsCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="d9f10c97aa647727adb64a349bb037c5c23c9a7a"/>
+    <clientCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="A402BB172929AE0D0ADA62F6864329C35DC29483"/>
+    <stsCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="FCB5EDC9FB09CF39716C09C35FDC883BD48ADD8D"/>
   </oioIdwsWcfConfiguration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
@@ -25,7 +25,7 @@
           <clientCredentials>
             <serviceCertificate>
               <scopedCertificates>
-                <add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
+                <add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="CA30025A4981147505B8D7A59052AC40C7033688" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -36,13 +36,13 @@
     </behaviors>
     <bindings>
       <SoapBinding>
-        <binding name="SoapBindingConfiguration" useHttps="false" sendTimeout="00:15:00"/>
+        <binding name="SoapBindingConfiguration" useHttps="true" sendTimeout="00:15:00"/>
       </SoapBinding>
     </bindings>
     <client>
       <endpoint address="http://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">
         <identity>
-          <dns value="wsp.oioidws-net.dk TEST (funktionscertifikat)"/>
+          <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
         </identity>
       </endpoint>
     </client>
